# windowstolinux-project

./: .gitignore  README.md  build.bat  demo.py  pyproject.toml  runtime_hook_gtk.py  windowstolinux.spec
.github/workflows/: build.yml
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: conftest.py  test_app_classifier.py  test_apps_scanner.py  test_cache.py  test_flathub.py  test_gui_logic.py  test_hardware_check.py  test_hardware_scanner.py  test_main.py  test_mappings.py  test_models.py  test_normalizer.py  test_output.py  test_placeholder.py  test_repology.py  test_repology_throttle.py
windowstolinux/: __main__.py  models.py  normalizer.py
windowstolinux/data/: hardware_blacklist.json  opensource_alternatives.json  windows_to_linux_mapping.json
windowstolinux/gui/: __init__.py  app.py
windowstolinux/gui/screens/: __init__.py  done.py  result.py  scan.py  start.py
windowstolinux/matcher/: __init__.py  app_classifier.py  hardware_check.py
windowstolinux/output/: __init__.py  html_renderer.py  pdf_exporter.py
windowstolinux/output/templates/: report.html.j2
windowstolinux/resolver/: __init__.py  cache.py  flathub.py  mappings.py  repology.py
windowstolinux/scanner/: __init__.py  apps.py  hardware.py
